[package]
name = "switchboard-example"
version = "0.1.0"
authors = ["mgild@umich.edu", "jessupjn@umich.edu"]
edition = "2018"

[features]
no-entrypoint = []

[dependencies]
bincode = "1.3.1"
byteorder = "1.3.4"
faster-hex = "0.5.0"
quick-protobuf = "0.8.0"
solana-program = "1.6"
switchboard-program = "0.1.29"
base58 = "0.1.0"
lexical = "5.2.2" # rust float parsing is ridiculously slow. this is 4000x faster

[dev-dependencies]
solana-program-test = "=1.6.1"
solana-sdk = "=1.6.1"

[lib]
crate-type = ["cdylib", "lib"]
