[package]
name = "switchboard-example"
version = "0.1.0"
authors = ["mgild@umich.edu", "jessupjn@umich.edu"]
edition = "2018"

[features]
no-entrypoint = []

[dependencies]
bincode = "1.3.1"
byteorder = "1.3.4"
faster-hex = "0.5.0"
quick-protobuf = "0.8.0"
solana-program = "1.9.4"
switchboard-program = "0.2.0"
base58 = "0.1.0"
lexical = "=6.0.1" # rust default float parsing is ridiculously slow

[lib]
crate-type = ["cdylib", "lib"]
